VPC/igw.tf
resource "aws_internet_gateway" "gw" {
 vpc_id = aws_vpc.Project.id
 
}
# Attach Internet Gateway to Public Subnets
resource "aws_route_table" "public_subnet_rt" {
  vpc_id = aws_vpc.Project.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }
}
resource "aws_route_table_association" "public1" {
  subnet_id      = aws_subnet.public1.id
  route_table_id = aws_route_table.public_subnet_rt.id
}

resource "aws_route_table_association" "public2" {
  subnet_id      = aws_subnet.public2.id
  route_table_id = aws_route_table.public_subnet_rt.id
}

resource "aws_route_table_association" "public3" {
  subnet_id      = aws_subnet.public3.id
  route_table_id = aws_route_table.public_subnet_rt.id
}
